*create ZamowienieDataStore *creating new Zamowienie works *sum of CartItems Price in Koszyk works in db, in View is not UPDATED in binding - to fix
